--- a/src/posts/cd-haul-2025-06-11.md
+++ b/src/posts/cd-haul-2025-06-11.md
@@ -6,4 +6,4 @@ date: 2025-06-11t21:19:00.0+01:00
 ---
 Cyclic Law-tól érkezett: Kammarheit, Ulvtharm, Sephiroth CD-k. Nemsokára jön egy mixtape, benne lesz egy-egy track, stay tuned vagy mi.
 
-![](/img/IMG_1029.jpeg)
+![](./img/IMG_1029.jpeg)
