--- a/src/posts/nacht-2025-06-07.md
+++ b/src/posts/nacht-2025-06-07.md
@@ -7,5 +7,4 @@ date: 2025-06-07t21:36:00.0+01:00
 
 Kezdjük a közös dark ambient aktivitást egy mixtape-pel: a Winter Light 'Nacht' műsorában Joel Gilardini, Maeror Tri, Caldon Glover, Vidna Obmana, Violent Grief és mások hallhatók.
 
-[Mixcloud – Nacht Radio Show 2025-06-07](https://www.mixcloud.com/winterlightnl/nacht-radio-show-07062025/)
-
+<iframe width="100%" height="120" src="https://player-widget.mixcloud.com/widget/iframe/?hide_cover=1&light=1&feed=%2Fwinterlightnl%2Fnacht-radio-show-07062025%2F" frameborder="0" allow="encrypted-media; fullscreen; autoplay; idle-detection; speaker-selection; web-share;" ></iframe>
