clean up some page structure issues

--- a/src/posts/cd-haul-2025-07-01.md
+++ b/src/posts/cd-haul-2025-07-01.md
@@ -1,9 +1,9 @@
 ---
-tags:
-  - post
+tags: post
 title: Lustmord CD
 date: 2025-07-01t22:07:00.0+01:00
 ---
+
 Lustmordot nyugodtan lehet legendának nevezni, a 2024-es [Much Unseen Is Also Here](https://lustmord.bandcamp.com/album/much-unseen-is-also-here) albuma pedig minden pillanatában méltó hozzá. Az [előző mixtape-en](https://www.mixcloud.com/rabbitknight/hypogeum-1/) is kapott helyet, és a nemsokára érkező másodikon is fog.
 
 > “My music is not meant to be explained - only listened to as a means of exposing the sheer insignificance of our primitive thoughts and actions within the vast scale of the cosmos - a scale which we as a species are ill equipped to comprehend.”
