--- a/src/posts/kult-of-o-2025-06-24.md
+++ b/src/posts/kult-of-o-2025-06-24.md
@@ -1,9 +1,9 @@
 ---
-tags:
-  - post
+tags: post
 title: Kult of O 2025-06-24
 date: 2025-06-25t15:22:00.0+01:00
 ---
+
 Oneirich is új mixtape-pel örvendeztet meg minket, benne Holotrop, Seesar és sokan mások.
 
 <iframe height="120" src="https://player-widget.mixcloud.com/widget/iframe/?hide_cover=1&light=1&feed=%2FuurObscuur%2Fdark-ritual-ambient-20250624%2F" allow="encrypted-media; fullscreen; autoplay; idle-detection; speaker-selection; web-share;" ></iframe>
