--- a/src/posts/nacht-2025-06-20.md
+++ b/src/posts/nacht-2025-06-20.md
@@ -1,9 +1,9 @@
 ---
-tags:
-  - post
+tags: post
 title: Nacht 2025-06-20
 date: 2025-06-22t21:36:00.0+01:00
 ---
+
 Nacht, újra.
 
 <iframe height="120" src="https://player-widget.mixcloud.com/widget/iframe/?hide_cover=1&light=1&feed=%2Fwinterlightnl%2Fnacht-radio-show-20062025%2F" allow="encrypted-media; fullscreen; autoplay; idle-detection; speaker-selection; web-share;" ></iframe>
