--- a/src/posts/nacht-2025-07-14.md
+++ b/src/posts/nacht-2025-07-14.md
@@ -6,4 +6,4 @@ date: 2025-07-14t12:42:00.0+02:00
 
 Nacht, 2025. július 14.
 
-<iframe height="120" src="https://player-widget.mixcloud.com/widget/iframe/?hide_cover=1&light=1&feed=%2Fwinterlightnl%2Fnacht-radio-show-14072025%2F" allow="encrypted-media; fullscreen; autoplay; idle-detection; speaker-selection; web-share;" ></iframe>
+{% mixcloud 'https://www.mixcloud.com/winterlightnl/nacht-radio-show-14072025/' %}
